adds docstrings and uses blueprint for routing and adds secrates

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -83,6 +83,7 @@ a.button {
     border-radius: 5px;
     text-decoration: none;
     cursor: pointer;
+    align-self: flex-start;
 }
 
 button:hover,
