--- a/app/templates/add.html
+++ b/app/templates/add.html
@@ -6,7 +6,9 @@
     <input type="text" name="author" placeholder="Author">
     <input type="text" name="title" placeholder="Title">
     <textarea name="content" placeholder="Content"></textarea>
-    <button type="submit">Submit</button>
-    <button type="reset">Clear</button>
+    <div class="button-group">
+        <button type="submit">Submit</button>
+        <button type="reset">Clear</button>
+    </div>
 </form>
 {% endblock %}
