--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -6,7 +6,9 @@
     <input type="text" name="author" value="{{ post.author }}">
     <input type="text" name="title" value="{{ post.title }}">
     <textarea name="content">{{ post.content }}</textarea>
-    <button type="submit">Save</button>
-    <a href="{{ url_for('index') }}" class="button">Cancel</a>
+    <div class="button-group">
+        <button type="submit" class="button">Save</button>
+        <a href="{{ url_for('blog.post', id=post.id) }}" class="button">Cancel</a>
+    </div>
 </form>
 {% endblock %}
