--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,16 +5,16 @@
     {% for post in posts %}
     <div class="post">
         <div>
-            <h2><a href="{{ url_for('post', id=post.id) }}">{{ post.title }}</a></h2>
+            <h2><a href="{{ url_for('blog.post', id=post.id) }}">{{ post.title }}</a></h2>
             <p>By {{ post.author }}</p>
             <p>{{ post.content[:100] }}...</p>
         </div>
         <div class="post-buttons">
-            <form action="{{ url_for('delete', id=post.id) }}" method="POST" style="display: inline;">
+            <form action="{{ url_for('blog.delete', id=post.id) }}" method="POST" style="display: inline;">
                 <button>Delete</button>
             </form>
-            <a href="{{ url_for('edit', id=post.id) }}" class="button">Edit</a>
-            <form action="{{ url_for('like', id=post.id) }}" method="POST" style="display: inline;">
+            <a href="{{ url_for('blog.edit', id=post.id) }}" class="button">Edit</a>
+            <form action="{{ url_for('blog.like', id=post.id) }}" method="POST" style="display: inline;">
                 <button>Like ({{ post.likes }})</button>
             </form>
         </div>
